# BachelorPoCs

./: README.md
app-icon/: package-lock.json  package.json
benchmark-algorithms/: Cargo.toml
benchmark-algorithms/src/: main.rs  needleman_wunsch.rs  rsa.rs  sieve_of_atkin.rs
clipboard/: package-lock.json  package.json
clipboard/src/: App.js
default-application/: README.md  package-lock.json  package.json
default-application/public/: index.html  manifest.json
default-application/src/: App.js
encryption-algorithms/: package-lock.json  package.json  tsconfig.json
encryption-algorithms/src/: encodeDecode.ts  index.ts
event-observability/: package-lock.json  package.json
event-observability/src/: App.js
file-system-access/: package-lock.json  package.json
file-system-access/src/: App.css  App.js  File.js  FileSystem.js  Folder.js
keyboard-shortcuts/: package-lock.json  package.json
keyboard-shortcuts/src/: App.tsx  Shortcut.tsx
notification/: package-lock.json  package.json
offline-availability/: README.md  docker-compose.yml
react-asc/: .gitignore  README.md  package-lock.json  package.json
react-rust/: README.md  package-lock.json  package.json
react-rust-tests/: package-lock.json  package.json
react-rust-tests/rust-src/: Cargo.toml
react-rust-tests/rust-src/src/: lib.rs  needleman_wunsch.rs  rsa.rs  sieve_of_atkin.rs
storage/: package-lock.json  package.json
title-bar/: package-lock.json  package.json
vite-pwa-offline/: package-lock.json  package.json  vite.config.ts
window-features/: package-lock.json  package.json
(+37 files in other folders)
