[package]
name = "rust-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
hex = "0.4.3"
sha1_smol = "1.0.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
ibig = "0.3.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]
